tests/ui/feature-gates/feature-gate-diagnostic-opaque.stderr
error: unknown diagnostic attribute
  --> $DIR/feature-gate-diagnostic-opaque.rs:5:15
   |
LL | #[diagnostic::opaque]
   |               ^^^^^^
   |
   = help: add `#![feature(diagnostic_opaque)]` to the crate attributes to enable
note: the lint level is defined here
  --> $DIR/feature-gate-diagnostic-opaque.rs:3:9
   |
LL | #![deny(unknown_diagnostic_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unknown diagnostic attribute
  --> $DIR/feature-gate-diagnostic-opaque.rs:11:15
   |
LL | #[diagnostic::opaque]
   |               ^^^^^^
   |
   = help: add `#![feature(diagnostic_opaque)]` to the crate attributes to enable

error: aborting due to 2 previous errors

